# full_cycle-microservice_adm_catalog

./: Dockerfile  pyproject.toml
.devcontainer/: devcontainer.json
category/domain/: entities.py
src/__seedwork/domain/: entities.py  exceptions.py  validators.py  value_objects.py
src/__seedwork/tests/unit/domain/: test_unit_entities.py  test_unit_validators.py  test_unit_value_objects copy.py  test_unit_value_objects.py
src/category/domain/: entities.py
src/category/tests/unit/domain/: test_unit_entities.py
src/category/tests/unit/integration/domain/: test_int_entities.py
